<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accelerator_dr">油门D/R</string>
    <string name="accelerator_middle">油门中位</string>
    <string name="accelerator_reverse">油门反转</string>
    <string name="advanced_set">高级设定</string>
    <string name="agreement_dialog_agree">同意</string>
    <string name="agreement_dialog_content">我已经阅读并同意 软件许可及服务协议 和 隐私政策</string>
    <string name="agreement_dialog_title">软件使用相关协议与政策</string>
    <string name="app_firmware_dl_done">更新下载完成,请立即升级</string>
    <string name="app_firmware_install">立即升级</string>
    <string name="app_firmware_install_fail">升级失败</string>
    <string name="app_firmware_install_success">升级成功</string>
    <string name="app_firmware_installing">正在升级最新固件...</string>
    <string name="app_firmware_installing_tip">请不要断开遥控车连接</string>
    <string name="app_firmware_title">固件更新</string>
    <string name="app_name">智能遥控车</string>
    <string name="app_reconnect">重新连接</string>
    <string name="app_version_check">正在检查更新中...</string>
    <string name="app_version_dl_confirm">正在下载更新,是否中断下载</string>
    <string name="app_version_dl_done">更新下载完成,请立即安装</string>
    <string name="app_version_dl_fail">下载失败</string>
    <string name="app_version_dl_redo">重新下载</string>
    <string name="app_version_downloading">正在下载中...</string>
    <string name="app_version_found">发现新版本</string>
    <string name="app_version_install">立即安装</string>
    <string name="app_version_install_fail">更新失败</string>
    <string name="app_version_install_redo">重新更新</string>
    <string name="app_version_install_success">更新成功</string>
    <string name="app_version_installing">正在安装最新版本...</string>
    <string name="app_version_installing_tip">当前更新不会消耗手机流量</string>
    <string name="app_version_latest">当前已是最新版本</string>
    <string name="app_version_not_network">请不要断开网络连接</string>
    <string name="app_version_now">立即更新</string>
    <string name="app_version_restart">立即重启</string>
    <string name="app_version_title">版本更新</string>
    <string name="back_side">后侧</string>
    <string name="black">黑色</string>
    <string name="ble_list">蓝牙列表</string>
    <string name="cancel">取消</string>
    <string name="chinese">中文</string>
    <string name="close_brake">关闭辅助刹车</string>
    <string name="confirm_exit">退出?</string>
    <string name="connect_fail">连接失败</string>
    <string name="connected">小米智能遥控车</string>
    <string name="connected_tip">电量</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="english">英文</string>
    <string name="exit">退出</string>
    <string name="formatter_item_count">Items_ %s</string>
    <string name="front_side">前侧</string>
    <string name="green">绿色</string>
    <string name="guide_tip1">通过控制手机的姿势来实现对遥控车方向的控制</string>
    <string name="guide_tip2">设置车辆参数以达到最佳性能</string>
    <string name="guide_tip3">车辆外观与性能的全方位展示</string>
    <string name="guide_tip4">根据个人习惯设置最佳体验模式</string>
    <string name="guide_tip5">通过摇杆上下滑动操控车辆前进或后退</string>
    <string name="guide_tip6">通过摇杆左右滑动操控车辆左转或右转</string>
    <string name="guide_tip7">启用限速时限制油门为最大值的70%</string>
    <string name="guide_tip8">启用辅助刹车时油门摇杆返回中位即自动刹车</string>
    <string name="guide_title1">重力感应</string>
    <string name="guide_title2">高级设置</string>
    <string name="guide_title3">车库</string>
    <string name="guide_title4">设置</string>
    <string name="guide_title5">油门摇杆</string>
    <string name="guide_title6">方向摇杆</string>
    <string name="guide_title7">限速</string>
    <string name="guide_title8">辅助刹车</string>
    <string name="install_permission_confirm">安装应用需要打开安装未知来源应用权限\n点击确定去设置中开启权限</string>
    <string name="install_permission_must_need">安装应用需要打开安装未知来源应用权限</string>
    <string name="label_rssi">RSSI_</string>
    <string name="left_hand">左手方向</string>
    <string name="low_battery_tip">电量低于10%</string>
    <string name="my_car">我的车库</string>
    <string name="my_car_tip">吉姆尼2019</string>
    <string name="need_open_relevant_power">需要打开相关权限</string>
    <string name="no">否</string>
    <string name="no_devices_tip_dialog_content">请打开遥控车开关，并确保为蓝灯闪烁状态</string>
    <string name="no_scan_device">No equipment scanned around</string>
    <string name="not_connected">未连接</string>
    <string name="not_connected_tip">请点击下方按钮连接遥控车</string>
    <string name="obverse_side">正侧</string>
    <string name="ok">确定</string>
    <string name="open_brake">开启辅助刹车</string>
    <string name="quit_low_speed">退出限速模式</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="request_ble">开启手机蓝牙?</string>
    <string name="research">重新搜索</string>
    <string name="right_hand">右手方向</string>
    <string name="search_ble">正在搜索蓝牙设备...</string>
    <string name="search_fail">未搜索到指定设备,请重新搜索</string>
    <string name="search_menu_title">Search</string>
    <string name="setting">设置</string>
    <string name="setting_about">关于</string>
    <string name="setting_about_privacy">隐私政策</string>
    <string name="setting_about_protocol">用户协议</string>
    <string name="setting_about_tip">小米智能遥控车</string>
    <string name="setting_about_title">关于</string>
    <string name="setting_about_version">版本信息</string>
    <string name="setting_guide">新手教程</string>
    <string name="setting_language">语言</string>
    <string name="setting_language_tip">常用阅读语言</string>
    <string name="setting_language_title">语言</string>
    <string name="setting_operator">操作设置</string>
    <string name="setting_preference">偏好设置</string>
    <string name="setting_preference_title">手柄偏好设置</string>
    <string name="setting_privacy_tip">个人信息保护</string>
    <string name="setting_protocol_content">我们的隐私政策已于2018 年 8 月 24 日更新。我们对隐私政策进行了修订，从该日期开始，这一隐私政策将能够提供有关我们如何管理您在使用 所有小米产品或服务时个人信息的隐私详情，除了特定的小米产品或服务提供独立的隐私政策以外。 \n请花一些时间熟悉我们的隐私权惯例，如果您有任何问题，请告诉我们。 \n\n我们向您承诺 \n本隐私政策规定了小米公司及关联公司（下文简称“小米”或“我们”）如何收集、使用、披露、处理和保护您在使用我们的产品和服务时通过 www.mi.com、en.miui.com、account.xiaomi.com、MIUI 以及我们在移动设备上提供的应用程序套装提供给我们的信息; 有关这些应用程序 的列表，请点击这里。若我们要求您提供某些信息，以便在使用小米产品和服务时验证您的身份，我们将仅严格遵守本隐私政策和/或我们的用 户条款与条件来使用这些信息。 \n\n本隐私政策在制定时充分考虑到您的需求; 您全面了解我们的个人资料收集和使用惯例而且确信自己最终能控制提供给小米的个人信息，这一 点至关重要。 \n在这项隐私政策中，“个人信息”指信息本身或与小米能够访问的个人的其他信息联系后能够识别特定个人的数据。此类个人信息包括您的姓 名、地址、电话号码和电子邮箱地址。</string>
    <string name="setting_protocol_tip">软件许可及服务协议</string>
    <string name="setting_tip">操作设置</string>
    <string name="setting_version">版本更新</string>
    <string name="setting_version_bin">固件版本</string>
    <string name="setting_version_copyright">Copyright @2016-2017 rcfans,ALL RIGHT Reserved</string>
    <string name="setting_version_current">软件版本</string>
    <string name="setting_version_tip">软件信息及固件信息</string>
    <string name="setting_version_title">版本信息</string>
    <string name="start_connect">开始连接</string>
    <string name="start_low_speed">进入限速模式</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="turn_dr">转向角度</string>
    <string name="turn_middle">转向中位</string>
    <string name="turn_reverse">转向反转</string>
    <string name="unknown_device">Unknown device</string>
    <string name="warmhints">温馨提示</string>
    <string name="yes">是</string>
</resources>
