<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/setting_title_layout"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="#111317"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="@color/setting_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="53dp"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:textAppearance="@style/mi_lanting_gb"
            android:textSize="12sp"
            android:textColor="@color/version_bin"
            android:id="@+id/tx_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/setting_version_current"/>
        <TextView
            android:textAppearance="@style/mi_lanting_gb"
            android:textSize="12sp"
            android:textColor="@color/version_bin"
            android:id="@+id/tx_bin_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/setting_version_bin"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:textAppearance="@style/mi_lanting_gb"
                android:textSize="11sp"
                android:textColor="@color/white_four_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_version_copyright"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
