<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_round_white"
    android:layout_width="340dp"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/mi_lanting_bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/version_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="26dp"
        android:text="@string/agreement_dialog_title"/>
    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp">
        <FrameLayout
            android:id="@+id/fly_agreement"
            android:layout_width="40dp"
            android:layout_height="40dp">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/iv_agree_button"
                android:layout_width="14dp"
                android:layout_height="14sp"
                android:layout_marginTop="4dp"
                android:src="@mipmap/ic_agree_uncheck"/>
        </FrameLayout>
        <TextView
            android:textAppearance="@style/mi_lanting_gb"
            android:textSize="15sp"
            android:textColor="@color/ccblack"
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement_dialog_content"/>
    </LinearLayout>
    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textAppearance="@style/mi_lanting_bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <View
            android:id="@+id/btn_divider"
            android:background="@color/divider"
            android:layout_width="1px"
            android:layout_height="match_parent"/>
        <TextView
            android:textAppearance="@style/mi_lanting_bold"
            android:textSize="14sp"
            android:textColor="@color/disable_black"
            android:gravity="center"
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/agreement_dialog_agree"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
