<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_round_white"
    android:layout_width="340dp"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/mi_lanting_bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/version_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="26dp"
        android:text="@string/app_version_title"/>
    <TextView
        android:textAppearance="@style/mi_lanting_bold"
        android:textSize="15sp"
        android:textColor="@color/dialog_ok"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/version_tip"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="29dp"
        android:text="@string/app_version_latest"/>
    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <RelativeLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/found_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_marginTop="26dp"
                android:src="@mipmap/version_found"
                android:indeterminate="true"/>
            <TextView
                android:textAppearance="@style/mi_lanting_gb"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:id="@+id/tx_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/app_version_found"/>
            <TextView
                android:textAppearance="@style/mi_lanting_gb"
                android:textSize="12sp"
                android:textColor="@color/transparent10"
                android:id="@+id/tx_found_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="26dp"
                android:text="v1.0.1"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/download_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.andorid.blerc.CircleProgressBar
                android:id="@+id/download_progressbar"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="18dp"/>
            <TextView
                android:textAppearance="@style/mi_lanting_gb"
                android:textSize="15sp"
                android:textColor="@color/ccblack"
                android:id="@+id/tx_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/app_version_downloading"/>
            <TextView
                android:textAppearance="@style/mi_lanting_gb"
                android:textSize="12sp"
                android:textColor="@color/transparent10"
                android:id="@+id/tx_check_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:text="@string/app_version_not_network"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="27dp"
                android:layout_height="29dp"
                android:layout_marginTop="58.5dp"
                android:src="@mipmap/version_up"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/check_layout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">
            <ProgressBar
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="18dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@anim/checkloading"/>
            <TextView
                android:textAppearance="@style/mi_lanting_gb"
                android:textSize="15sp"
                android:textColor="@color/ccblack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_check"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="29dp"
                android:layout_marginTop="58.5dp"
                android:src="@mipmap/version_up"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/fail_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="29dp"
            android:src="@mipmap/version_fail"/>
    </LinearLayout>
    <View
        android:id="@+id/layout_divider"
        android:background="@color/divider"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/btn_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textAppearance="@style/mi_lanting_bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tx_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <View
            android:id="@+id/btn_divider"
            android:background="@color/divider"
            android:visibility="gone"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
        <TextView
            android:textAppearance="@style/mi_lanting_bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/submit"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
