<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_round_white"
    android:layout_width="340dp"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/mi_lanting_bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/ble_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="26dp"
        android:text="@string/ble_list"/>
    <View
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:id="@+id/ble_list_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/ble_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@android:color/transparent"
            android:divider="@color/divider"
            android:dividerHeight="1px"/>
    </LinearLayout>
    <RelativeLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/stop_scan"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">
            <ProgressBar
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="17dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@anim/searchloading"/>
            <TextView
                android:textSize="15sp"
                android:textColor="@color/ccblack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_ble"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="26dp"
                android:layout_marginTop="62.5dp"
                android:layout_marginBottom="50.5dp"
                android:src="@mipmap/search_ble"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/fail_layout"
        android:background="@color/white"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="29dp"
            android:src="@mipmap/connect_failed"/>
    </LinearLayout>
    <View
        android:id="@+id/layout_divider"
        android:background="@color/divider"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/btn_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textAppearance="@style/mi_lanting_bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/start_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/research"
            android:layout_weight="1"/>
        <View
            android:id="@+id/btn_divider"
            android:background="@color/divider"
            android:visibility="gone"
            android:layout_width="1px"
            android:layout_height="match_parent"/>
        <TextView
            android:textAppearance="@style/mi_lanting_bold"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/submit"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ok"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
